test/compilable/imports/test73.d
module imports.test73;

void foo()
{
}

private void bar()
{
}

private void foo(int)
{
}

void bar(int)
{
}

void foot()()
{
}

private void bart()()
{
}

private void foot()(int)
{
}

void bart()(int)
{
}
