test/fail_compilation/imports/a21829.d
module imports.a21829;

private void foo(int) {}
public void foo(){}
